--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -258,6 +258,7 @@ deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
+deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:48b::1;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
@@ -376,6 +377,22 @@ deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:4140:6c6c::2;
 deny 2a0b:4142:7ca::2;
 deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
+deny 2a0b:f4c0:16c:10::1;
+deny 2a0b:f4c0:16c:1::1;
+deny 2a0b:f4c0:16c:11::1;
+deny 2a0b:f4c0:16c:12::1;
+deny 2a0b:f4c0:16c:13::1;
+deny 2a0b:f4c0:16c:14::1;
+deny 2a0b:f4c0:16c:15::1;
+deny 2a0b:f4c0:16c:16::1;
+deny 2a0b:f4c0:16c:2::1;
+deny 2a0b:f4c0:16c:3::1;
+deny 2a0b:f4c0:16c:4::1;
+deny 2a0b:f4c0:16c:5::1;
+deny 2a0b:f4c0:16c:6::1;
+deny 2a0b:f4c0:16c:7::1;
+deny 2a0b:f4c0:16c:8::1;
+deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
