--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -204,7 +204,6 @@ set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.97.113.53;
 set_real_ip_from 176.97.114.202;
-set_real_ip_from 177.149.130.78;
 set_real_ip_from 178.162.175.5;
 set_real_ip_from 178.162.201.174;
 set_real_ip_from 178.17.170.144;
@@ -306,7 +305,22 @@ set_real_ip_from 185.195.71.8;
 set_real_ip_from 185.195.71.9;
 set_real_ip_from 185.207.107.130;
 set_real_ip_from 185.207.107.216;
-set_real_ip_from 185.208.158.200;
+set_real_ip_from 185.220.100.240;
+set_real_ip_from 185.220.100.241;
+set_real_ip_from 185.220.100.242;
+set_real_ip_from 185.220.100.243;
+set_real_ip_from 185.220.100.244;
+set_real_ip_from 185.220.100.245;
+set_real_ip_from 185.220.100.246;
+set_real_ip_from 185.220.100.247;
+set_real_ip_from 185.220.100.248;
+set_real_ip_from 185.220.100.249;
+set_real_ip_from 185.220.100.250;
+set_real_ip_from 185.220.100.251;
+set_real_ip_from 185.220.100.252;
+set_real_ip_from 185.220.100.253;
+set_real_ip_from 185.220.100.254;
+set_real_ip_from 185.220.100.255;
 set_real_ip_from 185.220.101.0;
 set_real_ip_from 185.220.101.1;
 set_real_ip_from 185.220.101.10;
@@ -1037,6 +1051,7 @@ set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
+set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:2b88:2:48b::1;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
@@ -1155,6 +1170,22 @@ set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 set_real_ip_from 2a0b:4140:6c6c::2;
 set_real_ip_from 2a0b:4142:7ca::2;
 set_real_ip_from 2a0b:7140:8:1:5054:ff:fe43:9f9;
+set_real_ip_from 2a0b:f4c0:16c:10::1;
+set_real_ip_from 2a0b:f4c0:16c:1::1;
+set_real_ip_from 2a0b:f4c0:16c:11::1;
+set_real_ip_from 2a0b:f4c0:16c:12::1;
+set_real_ip_from 2a0b:f4c0:16c:13::1;
+set_real_ip_from 2a0b:f4c0:16c:14::1;
+set_real_ip_from 2a0b:f4c0:16c:15::1;
+set_real_ip_from 2a0b:f4c0:16c:16::1;
+set_real_ip_from 2a0b:f4c0:16c:2::1;
+set_real_ip_from 2a0b:f4c0:16c:3::1;
+set_real_ip_from 2a0b:f4c0:16c:4::1;
+set_real_ip_from 2a0b:f4c0:16c:5::1;
+set_real_ip_from 2a0b:f4c0:16c:6::1;
+set_real_ip_from 2a0b:f4c0:16c:7::1;
+set_real_ip_from 2a0b:f4c0:16c:8::1;
+set_real_ip_from 2a0b:f4c0:16c:9::1;
 set_real_ip_from 2a0b:f4c2::;
 set_real_ip_from 2a0b:f4c2::1;
 set_real_ip_from 2a0b:f4c2::10;
@@ -1529,6 +1560,7 @@ set_real_ip_from 45.95.169.228;
 set_real_ip_from 45.95.169.229;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
+set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 47.243.99.161;
@@ -1554,6 +1586,7 @@ set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
+set_real_ip_from 5.255.106.172;
 set_real_ip_from 5.255.111.64;
 set_real_ip_from 5.255.114.171;
 set_real_ip_from 5.255.115.58;
