--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -1,5 +1,5 @@
-set_real_ip_from 2001:15e8:110:7d00::30b;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
+set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
 set_real_ip_from 2001:1b60:3:221:3132:102:0:1;
 set_real_ip_from 2001:1b60:3:221:4134:101:0:1;
 set_real_ip_from 2001:1b60:3:221:701:102:0:1;
@@ -611,6 +611,7 @@ set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
+set_real_ip_from 2a0f:e586:f:f::188;
 set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
