--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -159,6 +159,7 @@ set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.210.173.17;
 set_real_ip_from 162.216.18.62;
 set_real_ip_from 162.247.72.192;
+set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
 set_real_ip_from 162.247.74.201;
 set_real_ip_from 162.247.74.202;
@@ -220,6 +221,7 @@ set_real_ip_from 178.20.55.182;
 set_real_ip_from 178.218.144.18;
 set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
+set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
@@ -258,6 +260,8 @@ set_real_ip_from 185.112.144.11;
 set_real_ip_from 185.112.146.167;
 set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.117.215.9;
+set_real_ip_from 185.120.16.171;
+set_real_ip_from 185.120.16.176;
 set_real_ip_from 185.129.61.1;
 set_real_ip_from 185.129.61.10;
 set_real_ip_from 185.129.61.129;
@@ -680,6 +684,7 @@ set_real_ip_from 198.7.112.99;
 set_real_ip_from 198.96.155.3;
 set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
+set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.53.136;
@@ -957,6 +962,7 @@ set_real_ip_from 66.78.40.182;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 68.54.81.91;
 set_real_ip_from 71.19.144.106;
+set_real_ip_from 71.19.144.128;
 set_real_ip_from 71.19.144.222;
 set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
